chore(index.ts): added Splide

--- a/src/style.sass
+++ b/src/style.sass
@@ -3,7 +3,7 @@
 html,
 body
   height: 100%
-  background-color: #d7d7d7 
+  background-color: #d7d7d7
 
 .container
   padding: 10px 30px 30px
@@ -61,24 +61,18 @@ body
 .item
   margin-bottom: 10px
   border-bottom: 2px solid grey
-  text-align: center
   padding: 10px 20px
 
-.title,
-.page,
-.date_container
-  text-align: left
-  line-height: 20px
-  display: inline-block
-  vertical-align: top
+.data_container
+  margin: 10px 0  
+  
+.time
+  margin-left: 30px
 
-.page,
-.date_container
-  width: 130px
-  margin-left: 20px
-
-.title
-  width: calc( 100% - 300px)
+.splide
+  margin: 0 auto
+  max-width: 800px
+  width: 100%
 
 .screenshot
   width: 100%
