--- a/src/style.sass
+++ b/src/style.sass
@@ -63,6 +63,9 @@ body
   border-bottom: 2px solid grey
   padding: 10px 20px
 
+.title
+  margin-bottom: 20px
+
 .data_container
   margin: 10px 0  
   
