--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -3,7 +3,7 @@
   height: 100%;
 }
 
-.loading{
+.loading {
   align-self: center;
   margin: 0 auto;
 }
@@ -13,19 +13,123 @@
   flex-direction: column;
   flex: 1 1 auto;
   height: 100%;
+  width: 300px;
 }
 
 .header {
-  padding: 10px;
+  padding: 10px 15px;
   box-shadow: var(--pv-shadow-light-low);
+  white-space: pre-wrap;
+}
+
+.meta_data {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding: 5px 20px;
 }
 
 .image_wrapper {
   flex-grow: 1;
-  padding: 15px 20px;
+  padding: 20px;
   height: 300px;
+  position: relative;
+
+  &:hover {
+    & .previous_button,
+    & .next_button {
+      opacity: 1;
+    }
+  }
+}
+
+.previous_button,
+.next_button {
+  display: flex;
+  align-items: center;
+  opacity: 0;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  width: 30%;
+  padding: 30px;
+  cursor: pointer;
+}
+
+.previous_button {
+  left: 0;
+}
+
+.next_button {
+  right: 0;
+  justify-content: flex-end;
 }
 
 .footer_navigation {
-  padding: 10px;
+  padding: 20px;
+  display: flex;
+  column-gap: 10px;
+  overflow-x: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.carousel_list {
+  display: flex;
+  list-style: none;
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  box-shadow: var(--pv-shadow-light-low);
+}
+
+.carousel_item_figure {
+  height: 100%;
+}
+
+.carousel_item {
+  flex: 0 0 auto;
+  width: 100%;
+}
+
+.image {
+  height: 100%;
+  object-fit: contain;
+}
+
+.preview_item {
+  height: fit-content;
+  box-shadow: var(--pv-shadow-light-low);
+  padding: 5px;
+  flex-shrink: 0;
+}
+
+.preview_image {
+  height: 120px;
+  margin-bottom: 10px;
+}
+
+.preview_description {
+  margin-top: auto;
+}
+
+.divider {
+  writing-mode: vertical-lr;
+  position: relative;
+  text-align: center;
+  margin: -5px 0;
+
+  &::after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 2px;
+    display: block;
+    background-color: var(--pv-color-gray-3);
+  }
 }
