--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -1,7 +1,8 @@
 .root {
   display: flex;
-  width: 25%;
-  min-width: 300px;
+  width: 350px;
   padding: 30px 10px;
   flex-direction: column;
+  overflow: auto;
+  flex-shrink: 0;
 }
