--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -8,6 +8,10 @@
   margin: 0 auto;
 }
 
+.sidebar{
+  width: 350px;
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -17,6 +21,8 @@
 }
 
 .header {
+  display: flex;
+  gap: 10px;
   padding: 10px 15px;
   box-shadow: var(--pv-shadow-light-low);
   white-space: pre-wrap;
