--- a/src/components/sidebar_item/sidebar_item.module.scss
+++ b/src/components/sidebar_item/sidebar_item.module.scss
@@ -6,10 +6,17 @@
   padding: 5px 10px;
   cursor: pointer;
 
+
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
   user-select: none;
+}
+
+.title {
+  overflow-wrap: break-word;
+  width: 100px;
+  flex: 1;
 }
 
 .icon {
