--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,5 +1,6 @@
 .root {
   display: flex;
+  justify-content: space-between;
   gap: 10px;
   padding: 10px 15px;
   box-shadow: var(--pv-shadow-light-low);
