--- a/src/components/sidebar_item/sidebar_item.module.scss
+++ b/src/components/sidebar_item/sidebar_item.module.scss
@@ -6,11 +6,16 @@
   padding: 5px 10px;
   cursor: pointer;
 
-
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
   user-select: none;
+
+  &[data-active="true"] {
+    background: var(--pv-color-primary-tint-5);
+  }
+
+  box-shadow: var(--pv-shadow-light-low);
 }
 
 .title {
